User entity updated